--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,5 @@
   "framework": "nextjs",
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install",
-  "ignoreCommand": "exit 0"
+  "installCommand": "cd frontend && npm install"
 }
