--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,15 +73,15 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "1.3.8",
+    "typescript": "^5",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "vaul": "1.1.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^15.1.3",
-    "typescript": "^5"
+    "eslint-config-next": "^15.1.3"
   }
 }
