--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,7 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "api/Dockerfile"
+dockerfilePath = "Dockerfile"
 watchPatterns = ["api/**"]
-
-[build.buildArgs]
-# Build context will be the api folder
 
 [deploy]
 healthcheckPath = "/api/health"
