--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,8 +2,8 @@ FROM maven:3.9-eclipse-temurin-21-alpine AS builder
 
 WORKDIR /build
 
-COPY api/pom.xml .
-COPY api/src ./src
+COPY pom.xml .
+COPY src ./src
 RUN mvn clean package -DskipTests -B
 
 FROM eclipse-temurin:21-jre-alpine
