--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.max-lifetime=1800000
 
 # JPA Configuration - Production settings
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
@@ -31,7 +31,10 @@ server.servlet.context-path=/api
 spring.web.cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
+spring.web.cors.allow-credentials=false
+
+# App CORS (used by com.crmflame.api.config.CorsConfig)
+cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000}
 
 # Logging - Reduce verbosity in production
 logging.level.root=WARN
